# SafeRAG-Guardrails-Platform

./: .env.example  .gitignore  README.md  db_schema.sql  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes_chat.py  routes_ingestion.py  routes_sessions.py
app/core/: config.py  exceptions.py  langchain_compat.py
app/models/: document.py  requests.py  responses.py  session.py
app/repositories/: audit_repository.py  langchain_vector_repository.py  session_repository.py  vector_repository.py
app/services/: audit_service.py  embedding_service.py  guardrail_service.py  ingestion_service.py  langchain_embedding_service.py  llm_service.py  pii_scanner.py  rag_service.py  secret_scanner.py
app/utils/: chunker.py  hashing.py
docs/: hld.md  interview-notes.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  Header.tsx  IdentityPanel.tsx  IngestionPanel.tsx  SessionSidebar.tsx
frontend/src/styles/: app.css
frontend/src/types/: api.ts
scripts/: demo.py
tests/: conftest.py  test_api.py  test_chunker.py  test_scanners.py  test_sessions.py  test_vector_repository.py
