[project]
name = "safe-rag-guardrails-platform"
version = "0.2.0"
description = "Production-grade Safe RAG platform with LangChain, AWS Bedrock Guardrails, pgvector/Pinecone, ingestion safety, and grounded responses."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "boto3>=1.34.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
